--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">shop</string>
-    <string name="catalog">КАТАЛОГ</string>
+    <string name="catalog">Каталог</string>
     <string name="profile">Профиль</string>
     <string name="login">Авторизация</string>
     <string name="showall">Показать все</string>
