lab 12, added flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,7 @@
     <string name="exit">Выход</string>
     <string name="product_image">product image</string>
     <string name="error">Возникла ошибка: %s</string>
+    <string name="just_error">Ошибка</string>
+    <string name="update">Обновить</string>
 
 </resources>
